app/styles/components/layout/hero.scss
layout-hero {

	width:100%;
	display:block;
	position:relative;
	background-size:cover;
	background-position:center;
	background-repeat:no-repeat;
	-webkit-background-size:cover;
	-moz-background-size:cover;
	-o-background-size:cover;
	background-size:cover;

	@include media(max-width-960) {
		height:auto;
		padding:0px 0 50px 0;
	}

	&[index] {
		height:100vh;
		display:flex;
		align-items:center;
		flex-direction:column;
		justify-content:center;
		background-image:radial-gradient(circle at top left, rgba(255, 255, 255, 0.2), transparent 45%), linear-gradient(rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1) 100%), url("/static/img/home/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			height:auto;
			padding:50px 0 100px 0;
		}

		content {
			margin-top:0px;
			text-align:left;

			@include media(max-width-960) {
				text-align:left;
				margin-top:50px;
			}

			a[button] {
				font-size:18px;
				padding:15px 40px;
				margin:20px 10px 10px 0px;

				@include media(max-width-960) {
					text-align:center;
					margin:0 10px 10px 0;
				}

				@include media(max-width-642) {
					width:100%;
				}

				span + i {
					@include media(max-width-400) {
						display:none;
					}
				}

				&:nth-of-type(2) {
					margin-top:0;
				}

			}

			h1[data-aos=fade-down] {
				-webkit-transform: translate3d(0, -20px, 0);
				transform: translate3d(0, -20px, 0);
			}

		}
	}

	&[cloud] {
		height:100vh;
		display:flex;
		align-items:center;
		flex-direction:column;
		justify-content:center;
		background-image:radial-gradient(circle at top left, rgba(255, 255, 255, 0.2), transparent 45%), linear-gradient(rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1) 100%), url("/static/img/cloud/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			height:auto;
			padding:50px 0 100px 0;
		}

		content {
			margin-top:0px;
			text-align:left;

			@include media(max-width-960) {
				text-align:left;
				margin-top:50px;
			}

			a[button] {
				font-size:18px;
				padding:15px 40px;
				margin:20px 10px 10px 0px;

				@include media(max-width-960) {
					text-align:center;
					margin:0 10px 10px 0;
				}

				@include media(max-width-642) {
					width:100%;
				}

				span + i {
					@include media(max-width-400) {
						display:none;
					}
				}

				&:nth-of-type(2) {
					margin-top:0;
				}

			}

			h1[data-aos=fade-down] {
				-webkit-transform: translate3d(0, -20px, 0);
				transform: translate3d(0, -20px, 0);
			}

			h2 {

				max-width:795px;
				font-weight:600;
				line-height:40px;
				color:transparent;
				margin-bottom:0.8em;
				padding-bottom:0.1em;
				-webkit-text-fill-color:transparent;
				background:-webkit-linear-gradient(0deg, #ff00a0, #ff98d9, #ff00a0);
				-webkit-background-clip:text;
	
				@include media(max-width-1250) {
					width:100%;
				}
	
				@include media(max-width-962) {
					font-size:24px;
				}
	
				@include media(max-width-768) {
					font-size:24px;
				}
	
			}

		}

	}

	&[surrealist] {
		height:100vh;
		display:flex;
		align-items:center;
		flex-direction:column;
		justify-content:center;
		background-image:radial-gradient(circle at top left, rgba(255, 255, 255, 0.2), transparent 45%), linear-gradient(rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 1) 100%), url("/static/img/surrealist/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			height:auto;
			padding:50px 0 100px 0;
		}

		content {
			margin-top:0px;
			text-align:left;

			@include media(max-width-960) {
				text-align:left;
				margin-top:50px;
			}

			a[button] {
				font-size:18px;
				padding:15px 40px;
				margin:20px 10px 10px 0px;

				@include media(max-width-960) {
					text-align:center;
					margin:0 10px 10px 0;
				}

				@include media(max-width-642) {
					width:100%;
				}

				span + i {
					@include media(max-width-400) {
						display:none;
					}
				}

				&:nth-of-type(2) {
					margin-top:0;
				}

			}

			img {

				width:38%;
				height:auto;

				@include media(max-width-962) {
					width:40%;
				}

				@include media(max-width-768) {
					width:50%;
				}

			}

		}
	}

	&[lq], &[cf], &[ix], &[ml] {

		height:auto;
		padding:120px 0 150px 0;
		background-image:radial-gradient(circle at top left, rgba(255, 255, 255, 0.15), transparent 45%);
		background-color:var(dark);

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:50px 0 50px 0;
		}

	}

	&[install], &[releases], &[license], &[security], &[features], &[opensource], &[media], &[giveaway] {
		height:auto;
		padding:120px 0 150px 0;

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:50px 0 50px 0;
		}

	}

	&[docs], &[blog-article] {
		padding:0;
		height:auto;
		height:50px;

		@include media(max-width-960) {
			top:0px;
			padding:0;
			height:50px;
		}

	}

	&[careers] {
		height:auto;
		padding:350px 0 150px 0;
		background-image:linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("/static/img/careers/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:50px 0 50px 0;
		}
	}

	&[team] {
		height:auto;
		padding:350px 0 150px 0;
		background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url("/static/img/team/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:120px 0 50px 0;
		}
	}

	&[community] {
		height:auto;
		padding:350px 0 150px 0;
		background-image:linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("/static/img/community/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:120px 0 50px 0;
		}
	}

	&[blog] {
		height:auto;
		padding:350px 0 150px 0;
		background-image:linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%), url("/static/img/blog/hero.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:120px 0 50px 0;
		}
	}

	&[yaacomm] {
		height:auto;
		padding:350px 0 150px 0;
		background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url("/static/img/yaacomm.jpg");
		background-color:#000000;

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:120px 0 50px 0;
		}
	}

	&[julian] {
		height:auto;
		padding:350px 60px 100px 60px;
		background-image:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("/static/img/studio.jpg");

		@include media(max-width-960) {
			top:0px;
			height:auto;
			padding:120px 40px 25px 40px;
		}
	}

	content {

		margin-top:100px;

		@include media(max-width-768) {
			margin-top:50px;
		}

		a[button] {

			font-size:18px;
			padding:15px 40px;
			margin:0 10px 10px 0px;

		}

	}

}

